fix: iOS click issue
Addresses the iOS click issue. iOS has an issue where the click
event behaves unlike its desktop counterpart. This issue is now
resolved.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="portfolio-wrapper">
+    <div id="portfolio-wrapper" class="portfolio-wrapper">
         <!-- HEADER CONTENT -->
         <header class="header-wrapper position-center">
             <div class="header-logo-wrapper unselectable"></div>
