--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 
 <head>
+    <title>Custom Portfolio</title>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="description" content="My online custom portfolio.">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"> -->
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/base.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <!-- [font awesome](http://fontawesome.io/icon/external-link-square/) -->
-    <link href="libs/font_awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link href="js/libs/font_awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <!-- [emoticons source](https://github.com/Ranks/emojione) -->
     <link href="https://cdn.jsdelivr.net/emojione/2.2.4/assets/css/emojione.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/emojione/2.2.4/lib/js/emojione.min.js"></script>
     <script src="js/app.js"></script>
-    <title>Custom Portfolio</title>
 </head>
 
 <body>
