--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
                 <div class="nav-compact-wrapper unselectable" data-delegation="hamburger_menu,cache_popup;stop" id="nav-hamburger-menu">
                     <i aria-hidden="true" class="fa fa-bars"></i>
                 </div>
-                <div class="popup popup-menu-wrapper hidden unselectable" data-delegation="hamburger_menu;stop" id="popup-menu-wrapper">
-                    <ul class="ul-reset">
-                        <li class="popup-item" data-delegation="nav_popup_home;" data-syncid="nav-home" id="nav-popup-home">home</li>
-                        <li class="popup-item" data-delegation="nav_popup_works;" data-syncid="nav-works" id="nav-popup-works">works</li>
-                        <!-- TODO: link/embed resume -->
-                        <!-- <li class="popup-item" data-delegation="nav_popup_resume;" data-syncid="nav-resume" id="nav-popup-resume">resume</li> -->
-                        <li class="popup-item hidden" data-delegation="nav_popup_contact;" data-syncid="nav-contact" id="nav-popup-contact">contact</li>
-                    </ul>
+                <!-- [https://googlechrome.github.io/samples/css-flexbox-abspos/] -->
+                <div class="safari-absolute-child-fix-wrapper">
+                    <div class="popup popup-menu-wrapper hidden unselectable" data-delegation="hamburger_menu;stop" id="popup-menu-wrapper">
+                        <ul class="ul-reset">
+                            <li class="popup-item" data-delegation="nav_popup_home;" data-syncid="nav-home" id="nav-popup-home">home</li>
+                            <li class="popup-item" data-delegation="nav_popup_works;" data-syncid="nav-works" id="nav-popup-works">works</li>
+                            <!-- TODO: link/embed resume -->
+                            <!-- <li class="popup-item" data-delegation="nav_popup_resume;" data-syncid="nav-resume" id="nav-popup-resume">resume</li> -->
+                            <li class="popup-item hidden" data-delegation="nav_popup_contact;" data-syncid="nav-contact" id="nav-popup-contact">contact</li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </header>
