refactor: Update gh-pages branch
- Update project items HTML and CSS. The changes include building the
project items now with JavaScript.
- Add GitHub colors and project data to Globals module.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <span class="text-vertical-center">
                         <span class="menu-link-rmargin">
                             <i aria-hidden="true" class="fa fa-file-code-o"></i>
-                        </span> works
+                        </span> projects
                         </span>
                     </div>
                     <div class="nav-item unselectable" data-delegation="nav_resume;stop;pd" id="nav-resume">
@@ -72,7 +72,7 @@
                                     <span class="menu-link-rmargin">
                             <i aria-hidden="true" class="fa fa-file-code-o"></i>
                         </span>
-                                    <span>works</span>
+                                    <span>projects</span>
                                     <!-- </span> -->
                                 </li>
                                 <li class="popup-item text-vertical-center flex" data-delegation="nav_resume;stop;pd" data-syncid="nav-resume" id="nav-popup-resume">
@@ -111,42 +111,47 @@
             </div>
             <div class="section-works-wrapper hidden animate-fadein" id="section-works-wrapper">
                 <div class="message-title">
-                    Featured Work
+                    Projects
                 </div>
-                <p class="message-text">Listed below are some of my recent works. Feel free to check them out!</p>
+                <p class="message-text">Listed below are the projects I have created. Feel free to check them out!</p>
                 <p class="message-text message-text-workcallout">Interested in hiring me? Want to work together? Have projects needed to be brought to life? <span class="contact-link" data-delegation="nav_contact;stop">Blast an email my way</span>. I'm ready to hear from you! <span class="emoticon-shortname">:nerd:</span></p>
                 <!-- TODO: add completed projects here. the ones shown are just placeholders. -->
                 <div class="projects-wrapper" id="projects-wrapper">
-                    <div class="project-item-wrapper">
-                        <div class="project-item-innerwrapper">
-                            <div class="project-img-wrapper">
-                                <picture><img alt="appify app" class="project-img undraggable" draggable="false" src="img/projects/interactionsjs.jpg"></picture>
-                            </div>
-                            <div class="project-info-wrapper">
-                                <span class="project-name unselectable">InteractionJS (events)</span><a href="https://github.com/cgabriel5/interactionjs" class="project-link" target="_blank"><span class="project-link-external"><i aria-hidden="true" class="fa fa-external-link-square"></i></span></a>
-                            </div>
+                    <!--                 <div class="project-item-wrapper">
+                    <div class="project-title"><a href="{{url}}" target="_blank">{{title}}</a></div>
+                    <div class="project-description">{{description}}</div>
+                    <div class="project-languages-wrapper">{{langs}}</div>
+                </div> -->
+                    <!--                 <div class="project-item-wrapper">
+                    <div class="project-item-innerwrapper">
+                        <div class="project-img-wrapper">
+                            <picture><img alt="appify app" class="project-img undraggable" draggable="false" src="img/projects/interactionsjs.jpg"></picture>
+                        </div>
+                        <div class="project-info-wrapper">
+                            <span class="project-name unselectable">InteractionJS (events)</span><a href="https://github.com/cgabriel5/interactionjs" class="project-link" target="_blank"><span class="project-link-external"><i aria-hidden="true" class="fa fa-external-link-square"></i></span></a>
                         </div>
                     </div>
-                    <div class="project-item-wrapper">
-                        <div class="project-item-innerwrapper">
-                            <div class="project-img-wrapper">
-                                <picture><img alt="sunflower app" class="project-img undraggable" draggable="false" src="img/projects/httpjs.jpg"></picture>
-                            </div>
-                            <div class="project-info-wrapper">
-                                <span class="project-name unselectable">XHR-Wrapper (httpjs)</span><a href="https://github.com/cgabriel5/httpjs" class="project-link" target="_blank"><span class="project-link-external"><i aria-hidden="true" class="fa fa-external-link-square"></i></span></a>
-                            </div>
+                </div>
+                <div class="project-item-wrapper">
+                    <div class="project-item-innerwrapper">
+                        <div class="project-img-wrapper">
+                            <picture><img alt="sunflower app" class="project-img undraggable" draggable="false" src="img/projects/httpjs.jpg"></picture>
+                        </div>
+                        <div class="project-info-wrapper">
+                            <span class="project-name unselectable">XHR-Wrapper (httpjs)</span><a href="https://github.com/cgabriel5/httpjs" class="project-link" target="_blank"><span class="project-link-external"><i aria-hidden="true" class="fa fa-external-link-square"></i></span></a>
                         </div>
                     </div>
-                    <div class="project-item-wrapper">
-                        <div class="project-item-innerwrapper">
-                            <div class="project-img-wrapper">
-                                <picture><img alt="bokeh app" class="project-img undraggable" draggable="false" src="img/projects/monitorjs.jpg"></picture>
-                            </div>
-                            <div class="project-info-wrapper">
-                                <span class="project-name unselectable">MonitorJS</span><a href="https://github.com/cgabriel5/monitorjs" class="project-link" target="_blank"><span class="project-link-external"><i aria-hidden="true" class="fa fa-external-link-square"></i></span></a>
-                            </div>
+                </div>
+                <div class="project-item-wrapper">
+                    <div class="project-item-innerwrapper">
+                        <div class="project-img-wrapper">
+                            <picture><img alt="bokeh app" class="project-img undraggable" draggable="false" src="img/projects/monitorjs.jpg"></picture>
+                        </div>
+                        <div class="project-info-wrapper">
+                            <span class="project-name unselectable">MonitorJS</span><a href="https://github.com/cgabriel5/monitorjs" class="project-link" target="_blank"><span class="project-link-external"><i aria-hidden="true" class="fa fa-external-link-square"></i></span></a>
                         </div>
                     </div>
+                </div> -->
                 </div>
             </div>
         </main>
